--- a/styles/event_style.css
+++ b/styles/event_style.css
@@ -160,10 +160,10 @@
     height: 366px;
 }
 .event_mahoose_birthday_1::before{
-    background-image:url(images/events/mahoose_birthday_1.png);
+    background-image:url(../images/events/mahoose_birthday_1.png);
 }
 .event_mahoose_birthday_1::after{
-    background-image:url(images_out/mahoose_birthday_1_average.png);
+    background-image:url(../images_out/mahoose_birthday_1_average.png);
     content:"Mahoose's Birthday Party\A Is he a Virgo or a Libra?";
 }
 
@@ -172,10 +172,10 @@
     height: 388px;
 }
 .event_mahoose_birthday_2::before{
-    background-image:url(images/events/mahoose_birthday_2.png);
+    background-image:url(../images/events/mahoose_birthday_2.png);
 }
 .event_mahoose_birthday_2::after{
-    background-image:url(images_out/mahoose_birthday_2_average.png);
+    background-image:url(../images_out/mahoose_birthday_2_average.png);
     content:"More Mahoose's Birthday Party\A Is it true that he is Akoot_'s alt? Hmm...";
 }
 
@@ -184,10 +184,10 @@
     height: 342px;
 }
 .event_mahoose_boats::before{
-    background-image:url(images/events/mahoose_boats.png);
+    background-image:url(../images/events/mahoose_boats.png);
 }
 .event_mahoose_boats::after{
-    background-image:url(images_out/mahoose_boats_average.png);
+    background-image:url(../images_out/mahoose_boats_average.png);
     content:"Boats and Mahoose\A Not sure what the context of this is, but it's a cool picture!";
 }
 
@@ -196,10 +196,10 @@
     height: 340px;
 }
 .event_mahoose_many::before{
-    background-image:url(images/events/mahoose_many.png);
+    background-image:url(../images/events/mahoose_many.png);
 }
 .event_mahoose_many::after{
-    background-image:url(images_out/mahoose_many_average.png);
+    background-image:url(../images_out/mahoose_many_average.png);
     content:"So many Mahooses\A Can there be too many Mahooses? \A The answer depends on the recipient...";
 }
 
@@ -208,10 +208,10 @@
     height: 406px;
 }
 .event_taco_bell::before{
-    background-image:url(images/events/taco_bell.png);
+    background-image:url(../images/events/taco_bell.png);
 }
 .event_taco_bell::after{
-    background-image:url(images_out/taco_bell_average.png);
+    background-image:url(../images_out/taco_bell_average.png);
     content:"Taco Bell\A One of the first builds in the second shopping district.";
 }
 
@@ -220,10 +220,10 @@
     height: 398px;
 }
 .event_mahoose_shop::before{
-    background-image:url(images/events/mahoose_shop.png);
+    background-image:url(../images/events/mahoose_shop.png);
 }
 .event_mahoose_shop::after{
-    background-image:url(images_out/mahoose_shop_average.png);
+    background-image:url(../images_out/mahoose_shop_average.png);
     content:"Mahoose's First Shop\A Obviously the prices are totally reasonable! \A Looking back on this, is this Mahoose being sold?";
 }
 
@@ -232,10 +232,10 @@
     height: 410px;
 }
 .event_bee_halloween::before{
-    background-image:url(images/events/bee_halloween.png);
+    background-image:url(../images/events/bee_halloween.png);
 }
 .event_bee_halloween::after{
-    background-image:url(images_out/bee_halloween_average.png);
+    background-image:url(../images_out/bee_halloween_average.png);
     content:"Bee's Contest Submission";
 }
 
@@ -244,10 +244,10 @@
     height: 338px;
 }
 .event_nova_halloween::before{
-    background-image:url(images/events/nova_halloween.png);
+    background-image:url(../images/events/nova_halloween.png);
 }
 .event_nova_halloween::after{
-    background-image:url(images_out/nova_halloween_average.png);
+    background-image:url(../images_out/nova_halloween_average.png);
     content:"Nova's Contest Submission";
 }
 
@@ -256,10 +256,10 @@
     height: 298px;
 }
 .event_nzzketch_halloween::before{
-    background-image:url(images/events/nzzketch_halloween.png);
+    background-image:url(../images/events/nzzketch_halloween.png);
 }
 .event_nzzketch_halloween::after{
-    background-image:url(images_out/nzzketch_halloween_average.png);
+    background-image:url(../images_out/nzzketch_halloween_average.png);
     content:"Nzzketch's Contest Submission";
 }
 
@@ -268,10 +268,10 @@
     height: 363px;
 }
 .event_picture_box_halloween::before{
-    background-image:url(images/events/picture_box_halloween.png);
+    background-image:url(../images/events/picture_box_halloween.png);
 }
 .event_picture_box_halloween::after{
-    background-image:url(images_out/picture_box_halloween_average.png);
+    background-image:url(../images_out/picture_box_halloween_average.png);
     content:"Picture Box's Contest Submission";
 }
 
@@ -280,10 +280,10 @@
     height: 404px;
 }
 .event_akoot_cafe::before{
-    background-image:url(images/events/akoot_cafe.png);
+    background-image:url(../images/events/akoot_cafe.png);
 }
 .event_akoot_cafe::after{
-    background-image:url(images_out/akoot_cafe_average.png);
+    background-image:url(../images_out/akoot_cafe_average.png);
     content:"Akoot's Cafe \A Located directly behind spawn.";
 }
 
@@ -292,10 +292,10 @@
     height: 385px;
 }
 .event_akoot_cafe_sitting::before{
-    background-image:url(images/events/akoot_cafe_sitting.png);
+    background-image:url(../images/events/akoot_cafe_sitting.png);
 }
 .event_akoot_cafe_sitting::after{
-    background-image:url(images_out/akoot_cafe_sitting_average.png);
+    background-image:url(../images_out/akoot_cafe_sitting_average.png);
     content:"Akoot's Cafe with customers\A Maybe the most famous picture on the server.";
 }
 
@@ -304,10 +304,10 @@
     height: 380px;
 }
 .event_christmas_friends::before{
-    background-image:url(images/events/christmas_friends.png);
+    background-image:url(../images/events/christmas_friends.png);
 }
 .event_christmas_friends::after{
-    background-image:url(images_out/christmas_friends_average.png);
+    background-image:url(../images_out/christmas_friends_average.png);
     content:"Christmas with friends";
 }
 
@@ -316,10 +316,10 @@
     height: 391px;
 }
 .event_christmas_friends_after::before{
-    background-image:url(images/events/christmas_friends_after.png);
+    background-image:url(../images/events/christmas_friends_after.png);
 }
 .event_christmas_friends_after::after{
-    background-image:url(images_out/christmas_friends_after_average.png);
+    background-image:url(../images_out/christmas_friends_after_average.png);
     content:"Friends enjoying Christmas";
 }
 
@@ -328,10 +328,10 @@
     height: 408px;
 }
 .event_christmas_tree::before{
-    background-image:url(images/events/christmas_tree.png);
+    background-image:url(../images/events/christmas_tree.png);
 }
 .event_christmas_tree::after{
-    background-image:url(images_out/christmas_tree_average.png);
+    background-image:url(../images_out/christmas_tree_average.png);
     content:"Christmas trees at spawn";
 }
 
@@ -340,10 +340,10 @@
     height: 438px;
 }
 .event_christmas_trees::before{
-    background-image:url(images/events/christmas_trees.png);
+    background-image:url(../images/events/christmas_trees.png);
 }
 .event_christmas_trees::after{
-    background-image:url(images_out/christmas_trees_average.png);
+    background-image:url(../images_out/christmas_trees_average.png);
     content:"More Christmas trees at spawn";
 }
 
@@ -353,10 +353,10 @@
     height: 313px;
 }
 .event_december_court::before{
-    background-image:url(images/events/december_court.png);
+    background-image:url(../images/events/december_court.png);
 }
 .event_december_court::after{
-    background-image:url(images_out/december_court_average.png);
+    background-image:url(../images_out/december_court_average.png);
     content:"December Court \A Akoot vs. Xanxus";
 }
 
@@ -365,10 +365,10 @@
     height: 321px;
 }
 .event_december_court_judge::before{
-    background-image:url(images/events/december_court_judge.png);
+    background-image:url(../images/events/december_court_judge.png);
 }
 .event_december_court_judge::after{
-    background-image:url(images_out/december_court_judge_average.png);
+    background-image:url(../images_out/december_court_judge_average.png);
     content:"December Court Judge\A Hash (why did they let her be judge?)";
 }
 
@@ -377,10 +377,10 @@
     height: 367px;
 }
 .event_december_court_judge_attacked::before{
-    background-image:url(images/events/december_court_judge_attacked.png);
+    background-image:url(../images/events/december_court_judge_attacked.png);
 }
 .event_december_court_judge_attacked::after{
-    background-image:url(images_out/december_court_judge_attacked_average.png);
+    background-image:url(../images_out/december_court_judge_attacked_average.png);
     content:"December Court Judge Attacked!\A But who really started it?";
 }
 
@@ -390,10 +390,10 @@
     height: 375px;
 }
 .event_new_years_1::before{
-    background-image:url(images/events/new_years_1.png);
+    background-image:url(../images/events/new_years_1.png);
 }
 .event_new_years_1::after{
-    background-image:url(images_out/new_years_1_average.png);
+    background-image:url(../images_out/new_years_1_average.png);
     content:"New Year's Eve\A Group photo!";
 }
 
@@ -402,10 +402,10 @@
     height: 306px;
 }
 .event_new_years_2::before{
-    background-image:url(images/events/new_years_2.png);
+    background-image:url(../images/events/new_years_2.png);
 }
 .event_new_years_2::after{
-    background-image:url(images_out/new_years_2_average.png);
+    background-image:url(../images_out/new_years_2_average.png);
     content:"New Year's Eve\A Friends watching the fireworks.";
 }
 
@@ -414,10 +414,10 @@
     height: 369px;
 }
 .event_new_years_3::before{
-    background-image:url(images/events/new_years_3.png);
+    background-image:url(../images/events/new_years_3.png);
 }
 .event_new_years_3::after{
-    background-image:url(images_out/new_years_3_average.png);
+    background-image:url(../images_out/new_years_3_average.png);
     content:"New Year's Eve\A Another group photo, are you in it?";
 }
 
@@ -426,10 +426,10 @@
     height: 369px;
 }
 .event_new_years_4::before{
-    background-image:url(images/events/new_years_4.png);
+    background-image:url(../images/events/new_years_4.png);
 }
 .event_new_years_4::after{
-    background-image:url(images_out/new_years_4_average.png);
+    background-image:url(../images_out/new_years_4_average.png);
     content:"New Year's Eve\A More friends watching the fireworks.";
 }
 
@@ -438,10 +438,10 @@
     height: 410px;
 }
 .event_traveler::before{
-    background-image:url(images/events/traveler.png);
+    background-image:url(../images/events/traveler.png);
 }
 .event_traveler::after{
-    background-image:url(images_out/traveler_average.png);
+    background-image:url(../images_out/traveler_average.png);
     content:"Traveler Minigame\A Created by Jozef and extremely difficult!";
 }
 
@@ -450,9 +450,9 @@
     height: 410px;
 }
 .event_traveler_entrance::before{
-    background-image:url(images/events/traveler_entrance.png);
+    background-image:url(../images/events/traveler_entrance.png);
 }
 .event_traveler_entrance::after{
-    background-image:url(images_out/traveler_entrance_average.png);
+    background-image:url(../images_out/traveler_entrance_average.png);
     content:"Traveler Minigame\A Created by Jozef and extremely difficult!";
 }
