--- a/styles/event_after_style.css
+++ b/styles/event_after_style.css
@@ -13,7 +13,12 @@
 .event_end_2,
 .event_march_laying_1,
 .event_march_laying_2,
-.event_march_laying_3
+.event_march_laying_3,
+
+.event_mail_1,
+.event_mail_2,
+.event_bee_farm,
+.event_sizzle_stand
 {
     display: block;
     position: relative;
@@ -33,7 +38,12 @@
 .event_end_2::before,
 .event_march_laying_1::before,
 .event_march_laying_2::before,
-.event_march_laying_3::before
+.event_march_laying_3::before,
+
+.event_mail_1::before,
+.event_mail_2::before,
+.event_bee_farm::before,
+.event_sizzle_stand::before
 {
     content:"";
     top: 0;
@@ -59,10 +69,15 @@
 .event_sizzle:hover::before,
 
 .event_end_1:hover::before,
-.event_end_2Lhover::before,
+.event_end_2:hover::before,
 .event_march_laying_1:hover::before,
 .event_march_laying_2:hover::before,
-.event_march_laying_3:hover::before
+.event_march_laying_3:hover::before,
+
+.event_mail_1:hover::before,
+.event_mail_2:hover::before,
+.event_bee_farm:hover::before,
+.event_sizzle_stand:hover::before
 {
     opacity:0;
 }
@@ -80,7 +95,12 @@
 .event_end_2::after,
 .event_march_laying_1::after,
 .event_march_laying_2::after,
-.event_march_laying_3::after
+.event_march_laying_3::after,
+
+.event_mail_1::after,
+.event_mail_2::after,
+.event_bee_farm::after,
+.event_sizzle_stand::after
 
 {
     opacity: 0.75;
@@ -252,4 +272,52 @@
 .event_march_laying_3::after{
     background-image:url(../images_out/march_laying_3_average.png);
     content:"Mahoose laying on bed";
+}
+
+.event_mail_1{
+    width: 645px;
+    height: 445px;
+}
+.event_mail_1::before{
+    background-image:url(../images/events/mail_1.png);
+}
+.event_mail_1::after{
+    background-image:url(../images_out/mail_1_average.png);
+    content:"Mailboxes \A Mail system got an upgrade.";
+}
+
+.event_mail_2{
+    width: 780px;
+    height: 404px;
+}
+.event_mail_2::before{
+    background-image:url(../images/events/mail_2.png);
+}
+.event_mail_2::after{
+    background-image:url(../images_out/mail_2_average.png);
+    content:"Do you have mail?";
+}
+
+.event_bee_farm{
+    width: 680px;
+    height: 411px;
+}
+.event_bee_farm::before{
+    background-image:url(../images/events/bee_farm.png);
+}
+.event_bee_farm::after{
+    background-image:url(../images_out/bee_farm_average.png);
+    content:"Noisy's bee farm \A Located at spawn, public use. Super cute!";
+}
+
+.event_sizzle_stand{
+    width: 507px;
+    height: 426px;
+}
+.event_sizzle_stand::before{
+    background-image:url(../images/events/sizzle_stand.png);
+}
+.event_sizzle_stand::after{
+    background-image:url(../images_out/sizzle_stand_average.png);
+    content:"Sizzle stand \A Make sure to get your copy of the server's journalistic publication.";
 }
