--- a/styles/event_style.css
+++ b/styles/event_style.css
@@ -454,5 +454,5 @@
 }
 .event_traveler_entrance::after{
     background-image:url(../images_out/traveler_entrance_average.png);
-    content:"Traveler Minigame\A Created by Jozef and extremely difficult!";
+    content:"Traveler Minigame\A Have you completed it?";
 }
